--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ isort = "^5.10.1"
 black = "^22.1.0"
 django-ninja = "^0.17.0"
 django-stubs = "^1.9.0"
+PyMySQL = "^1.0.2"
+types-PyMySQL = "^1.0.13"
+cryptography = "^36.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
